--- a/application/src/main/webapp/css/newlook.css
+++ b/application/src/main/webapp/css/newlook.css
@@ -39,8 +39,12 @@ button {
     text-align: center;
     vertical-align: middle;
     border: 1px solid #404040;
-    margin: 0;
+    margin: 0px;
     cursor: pointer;
+}
+
+.addsubunit-button {
+    margin-top: 15px;
 }
 
 .dialog-button:disabled {
