changed positioning of organizationtree-icons, i thought they were not quite even with the organizationnames so i raised them by 7px

--- a/application/src/main/webapp/css/newlook.css
+++ b/application/src/main/webapp/css/newlook.css
@@ -282,6 +282,11 @@ fieldset {
     min-width: 300px;
 }
 
+#unit-tree-icons{
+    position: relative;
+    bottom: 7px;
+}
+
 .imageonly-button {
     background: none;
     padding: 0;
