--- a/application/src/main/webapp/css/newlook.css
+++ b/application/src/main/webapp/css/newlook.css
@@ -33,6 +33,10 @@ div {
     padding: 0px;
 }
 
+.datatable{
+    padding-right: 250px;
+}
+
 button {
     background-color: #585c95;
     color: white;
@@ -104,7 +108,6 @@ fieldset {
 }
 
 .helpbox{
-    height: 200px;
     width: 200px;
     background-color: white;
     border-width: 1px;
@@ -119,7 +122,7 @@ fieldset {
 }
 
 #helpbox-unitlist-addunit{
-   top: 70px;
+   top: 97px;
 }
 #helpbox-unitlist-help{
    top: 300px;
