--- a/application/src/main/webapp/css/newlook.css
+++ b/application/src/main/webapp/css/newlook.css
@@ -1,4 +1,4 @@
-/* 
+/*
     Document   : newlook
     Created on : 2010-okt-28, 13:18:42
     Author     : henrik
@@ -57,6 +57,13 @@ button {
     width: 45px;
     padding: 2px;
     margin-top: 15px;
+    float: left;
+}
+
+.savedSpan{
+    float: left;
+    margin-top: 16px;
+    margin-left: 4px;
 }
 
 .addsubunit-button {
