cells are now highlighted in different color than row highlighting

--- a/application/src/main/webapp/css/demo_table.css
+++ b/application/src/main/webapp/css/demo_table.css
@@ -501,6 +501,9 @@ tr.even.gradeU td.sorting_3 {
 	background-color: #DBFF70;
 }
 
+.cell_highlight{
+    background-color: #D5FF59;
+}
 
 /*
  * KeyTable
