function tab css

--- a/application/src/main/webapp/css/newlook.css
+++ b/application/src/main/webapp/css/newlook.css
@@ -591,6 +591,19 @@ fieldset {
     /*    margin: 5px;*/
 }
 
+.text-field-multiple {
+    background-color: white;
+    border-bottom-style: inset;
+    border-bottom-width: 2px;
+    border-left-style: inset;
+    border-left-width: 2px;
+    border-right-style: inset;
+    border-right-width: 2px;
+    border-top-style: inset;
+    border-top-width: 2px;
+    color: #404040;
+}
+
 .digits-3 {
     width: 3em;
 }
@@ -726,3 +739,51 @@ fieldset {
     text-align: left;
 }
 
+/*Multiselect*/
+.ms2side__div {
+	clear: left;
+	width: 100%;
+	padding: 1px;
+	float: left;
+	background : url('') repeat-x;  HACK FOR CHROME
+}
+
+.ms2side__select {
+	float: left;
+}
+
+.ms2side__options, .ms2side__updown {
+	float: left;
+	font-size: 10pt;
+	margin: 0;
+	padding: 0 8px;
+	width: 150px;
+	text-align: center;
+	overflow: hidden;
+    margin-top: 38px;
+}
+
+.ms2side__options p, .ms2side__updown p {
+	margin: 2px 0;
+	padding: 0;
+	cursor: pointer;
+	border: 1px solid black;
+}
+
+.ms2side__options p.ms2side_hover, .ms2side__updown p.ms2side_hover {
+	background-color: #DADBE9;
+	border-color: #585C95/*#0000FF*/;
+	cursor: pointer;
+}
+
+.ms2side__options p.ms2side__hide, .ms2side__updown p.ms2side__hide {
+	cursor: default;
+	color: gray;
+	border: 1px solid gray;
+	background-color: #F0F0F0;
+}
+
+.ms2side__div select {
+	width: 220px;
+	float: left;
+}
