--- a/application/src/main/webapp/css/newlook.css
+++ b/application/src/main/webapp/css/newlook.css
@@ -48,7 +48,7 @@ form {
     margin-bottom: 1em;
 }
 
-#savebutton {
+#saveButton {
     float: left;
 }
 
@@ -67,7 +67,6 @@ form {
 
 .savedSpan {
     float: left;
-    margin-top: 16px;
     margin-left: 4px;
 }
 
