--- a/application/src/main/webapp/css/newlook.css
+++ b/application/src/main/webapp/css/newlook.css
@@ -403,7 +403,7 @@ fieldset {
     line-height: 1.4em;
     font-weight: bold;
     color: #606060;
-    width: 468px;
+    /*width: 468px;*/
 }
 
 .field-preview {
