--- a/application/src/main/webapp/css/newlook.css
+++ b/application/src/main/webapp/css/newlook.css
@@ -41,6 +41,7 @@ button {
     vertical-align: middle;
     border: 1px solid #404040;
     margin: 0px;
+    margin-right: 10px;
     cursor: pointer;
 }
 
