clicking add-person now opens person-form. Still need to implement saving of the form

--- a/application/src/main/webapp/css/newlook.css
+++ b/application/src/main/webapp/css/newlook.css
@@ -770,10 +770,12 @@ label.error {
 
 .newpersontop {
     margin-bottom: 10px;
+    cursor: pointer;
 }
 
 .newpersonbottom {
     margin-top: 25px;
+    cursor: pointer;
 }
 
 /*Multiselect*/
