forms on education/experience tab now shown in order

--- a/application/src/main/webapp/css/newlook.css
+++ b/application/src/main/webapp/css/newlook.css
@@ -829,7 +829,11 @@ label.error {
 }
 
 .delimitedForm{
-  border-bottom: 1px solid #DDD;
+  border-top: 1px solid #DDD;
+}
+
+.groupedFormsContainer{
+  border: 1px solid #DDD;
 }
 
 
