--- a/application/src/main/webapp/css/newlook.css
+++ b/application/src/main/webapp/css/newlook.css
@@ -414,6 +414,14 @@ fieldset {
     /*width: 468px;*/
 }
 
+.checkbox{
+    text-indent: 20px;
+    width: 200px;
+}
+.radiobutton{
+    text-indent: 20px;
+}
+
 label.error {
     float: none;
     color: red;
@@ -616,7 +624,6 @@ label.error {
     border-top-width: 2px;
     color: #404040;
     width: 460px;
-    height: 15px;
     /*    margin: 5px;*/
 }
 
