--- a/application/src/main/webapp/css/newlook.css
+++ b/application/src/main/webapp/css/newlook.css
@@ -323,6 +323,7 @@ input[type="radio"]{
 .tree-column {
     display: table-cell;
     padding-right: 30px;
+    padding-left: 30px;
     line-height: 18px;
     min-width: 300px;
 }
