minor css update

--- a/application/src/main/webapp/css/newlook.css
+++ b/application/src/main/webapp/css/newlook.css
@@ -331,6 +331,7 @@ input[type="radio"]{
 #unit-tree-icons {
     position: relative;
     bottom: 4px;
+    line-height: 15px;
 }
 
 .imageonly-button {
