Fixed checkbox bug in Firefox and Opera

--- a/application/src/main/webapp/css/newlook.css
+++ b/application/src/main/webapp/css/newlook.css
@@ -418,9 +418,8 @@ input[type="radio"]{
     /*width: 468px;*/
 }
 
-.checkbox{
-    text-indent: 20px;
-    width: 200px;
+label.checkbox{
+    margin-left: 5px;
 }
 .radiobutton{
     text-indent: 20px;
