--- a/application/src/main/webapp/css/newlook.css
+++ b/application/src/main/webapp/css/newlook.css
@@ -866,10 +866,10 @@ label.error {
 }
 
 #imgUploadContainer {
-    position: relative;
+    /*position: relative;
     top: 10px;
     right: 120px;
-    float: right;
+    float: right;*/
 }
 
 
