added method for scaling picture

--- a/application/src/main/webapp/css/newlook.css
+++ b/application/src/main/webapp/css/newlook.css
@@ -872,4 +872,9 @@ label.error {
     float: right;*/
 }
 
+.loading{
+    background-image:url('/images/loading.gif');
+    background-repeat: no-repeat;
+}
+
 
