--- a/application/src/main/webapp/css/newlook.css
+++ b/application/src/main/webapp/css/newlook.css
@@ -860,17 +860,24 @@ label.error {
 }
 
 #imagePreview {
-    height: 120px;
-    width: 80px;
+    height: 210px;
+    width: 140px;
 }
 
 #imgUploadContainer {
-
+    margin-right: auto;
+    margin-left: auto;
 }
 
-.loading{
-    background-image:url('/images/loading.gif');
+.loading {
+    background-image: url('/images/loading.gif');
     background-repeat: no-repeat;
+}
+
+#smallProfileImage {
+    position: absolute;
+    bottom: 380px;
+    left: 220px;
 }
 
 
