added a function view and a function popup tab

--- a/application/src/main/webapp/css/newlook.css
+++ b/application/src/main/webapp/css/newlook.css
@@ -787,15 +787,15 @@ label.error {
 
 }
 
-.newperson{
+.addnew{
    cursor: pointer;
 }
 
-.newpersontop {
+.addnewtop {
     margin-bottom: 10px;
 }
 
-.newpersonbottom {
+.addnewbottom {
     margin-top: 25px;
 }
 
