(FVW-82) added relatives name and relatives contact information

--- a/application/src/main/webapp/css/newlook.css
+++ b/application/src/main/webapp/css/newlook.css
@@ -894,9 +894,9 @@ label.error {
 
 #smallProfileImage {
     position: absolute;
-    bottom: 380px;
     left: 220px;
     cursor: pointer;
+    top: 71px;
 }
 
 
