added icons for adding new experiences etc. + refactoring

--- a/application/src/main/webapp/css/newlook.css
+++ b/application/src/main/webapp/css/newlook.css
@@ -222,6 +222,10 @@ input[type="radio"] {
     white-space: nowrap;
 }
 
+.pointer{
+    cursor: pointer;
+}
+
 #button-bar {
     white-space: nowrap;
     display: table-cell;
